/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

package messages.behaviour.proto;

message Behaviour {
    enum Type {
        ACTION_REGISTER = 1;
        ACTION_STATE = 2;
    }

    required Type type = 1;

    optional ActionRegister action_register = 2;
    optional ActionStateChange action_state_change = 3;
}

message ActionRegister {
    required uint32 id = 1;
    required string name = 2;
    repeated LimbSet limb_set = 3;
}

message ActionStateChange {

    enum State {
        START = 1;
        KILL = 2;
    }

    required State state = 1; 
    required string name = 2;
    repeated uint32 limbs = 3;
}

message LimbSet {
    required float priority = 1;
    repeated uint32 limbs = 2;
}